# OPENCV

./: DisplayImage.cpp  LoadDispImg.cpp  README.md  README.org
BRG2GRAY/: cvtColor  cvtColor.cpp
DispImg/: LoadDispImg  LoadDispImg.cpp
freq-filtering/: CMakeLists.txt
freq-filtering/src/: canny.cpp  cannypoints.cpp  dft.cpp  pontilhismo.cpp
kmeans/: CMakeLists.txt
kmeans/src/: kmeans.cpp
labeling/: CMakeCache.txt  cmake_install.cmake  compile_commands.json  labeling
labeling/.cache/clangd/index/: labeling.cpp.A4DC128DCE8EE7A8.idx
labeling/src/: labeling.cpp  labeling.cpp~
manip-histogram/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
manip-histogram/src/: equalize.cpp  histogram.cpp  motiondetector.cpp
pixel-manipulation/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  compile_commands.json  pixel-manip  pixels  regions  swap-regions
pixel-manipulation/.cache/clangd/index/: pixel-manip.cpp.496B4CBAA0195EE9.idx
pixel-manipulation/src/: pixel-manip.cpp  pixel-manip.cpp~  pixels.cpp  pixels.cpp~  regions.cpp  regions.cpp~  swap-regions.cpp  swap-regions.cpp~
space-filtering/: CMakeLists.txt
space-filtering/src/: addweighted.cpp  spacefilter.cpp  video_manip.cpp
